--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,6 +14,7 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
+Imports: ggplot2 (>= 2.2.1)
 Suggests: knitr,
     rmarkdown
 VignetteBuilder: knitr
