--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,8 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
-Imports: ggplot2 (>= 2.2.1)
+Imports: ggplot2 (>= 2.2.1),
+    broom (>= 0.4.2)
 Suggests: knitr,
     rmarkdown
 VignetteBuilder: knitr
