--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,5 +2,6 @@
 
 export(average_technical_replicates)
 export(correct_fret_signal)
+export(fit_binding_model)
 export(guess_quadratic_parameters)
 export(inspect_raw_data)
