--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,7 +15,8 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
 Imports: ggplot2 (>= 2.2.1),
-    broom (>= 0.4.2)
+    broom (>= 0.4.2),
+    cowplot (>= 0.7.0)
 Suggests: knitr,
     rmarkdown
 VignetteBuilder: knitr
