--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,5 +18,6 @@ Imports: ggplot2 (>= 2.2.1),
     broom (>= 0.4.2),
     cowplot (>= 0.7.0)
 Suggests: knitr (>= 1.15.1),
-    rmarkdown (>= 1.3)
+    rmarkdown (>= 1.3),
+    testthat (>= 1.0.2)
 VignetteBuilder: knitr
