fit_binding_model now uses equations from an extensible library, closes #7
Also, figure making code moved to a new function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,4 +5,7 @@ export(batch_process)
 export(correct_fret_signal)
 export(fit_binding_model)
 export(guess_quadratic_parameters)
+export(hyperbola)
 export(inspect_raw_data)
+export(quadratic)
+export(quadratic_homodimer)
