--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,7 @@ export(average_technical_replicates)
 export(batch_process)
 export(correct_fret_signal)
 export(fit_binding_model)
-export(guess_quadratic_parameters)
+export(guess_parameters)
 export(hyperbola)
 export(inspect_raw_data)
 export(make_figure)
