Added new function: plan_experiment

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,5 +8,6 @@ export(guess_parameters)
 export(hyperbola)
 export(inspect_raw_data)
 export(make_figure)
+export(plan_experiment)
 export(quadratic)
 export(quadratic_homodimer)
