--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,7 +16,10 @@ LazyData: true
 RoxygenNote: 6.0.1
 Imports: ggplot2 (>= 2.2.1),
     broom (>= 0.4.2),
-    cowplot (>= 0.7.0)
+    cowplot (>= 0.7.0),
+    readr,
+    dplyr,
+    minpack.lm
 Suggests: knitr (>= 1.15.1),
     rmarkdown (>= 1.3),
     testthat (>= 1.0.2)
