refactor analysis code

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,4 +10,4 @@ export(inspect_raw_data)
 export(make_figure)
 export(plan_experiment)
 export(quadratic)
-export(quadratic_homodimer)
+export(extract_fit_parameters)
