--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,9 +22,10 @@ RoxygenNote: 6.0.1
 Imports: ggplot2 (>= 2.2.1),
     broom (>= 0.4.2),
     cowplot (>= 0.7.0),
-    readr,
-    dplyr,
-    minpack.lm
+    readr (>= 1.1.1),
+    dplyr (>= 0.5.0),
+    minpack.lm (>= 1.2-1),
+    magrittr (>= 1.5)
 Suggests: knitr (>= 1.15.1),
     rmarkdown (>= 1.3),
     testthat (>= 1.0.2)
