Renamed makeMasterFile to format_data, with a lot of refactoring and enhancements

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,10 +5,10 @@ export(batch_process)
 export(correct_fret_signal)
 export(extract_fit_parameters)
 export(fit_binding_model)
+export(format_data)
 export(guess_parameters)
 export(hyperbola)
 export(inspect_raw_data)
-export(makeMasterFile)
 export(make_figure)
 export(plan_experiment)
 export(quadratic)
