Renamed equation 'hyperbola' to 'hyperbolic'

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,7 @@ export(extract_fit_parameters)
 export(fit_binding_model)
 export(format_data)
 export(guess_parameters)
-export(hyperbola)
+export(hyperbolic)
 export(inspect_raw_data)
 export(make_figure)
 export(plan_experiment)
