Updated make_figure to work in the new pipeline mode. Closes #28

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(correct_fret_signal)
 export(fit_binding_model)
 export(format_data)
 export(guess_parameters)
+export(hill)
 export(hyperbolic)
 export(inspect_raw_data)
 export(make_figure)
