Eliminated warnings from devtools::check

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,3 +11,5 @@ export(hyperbolic)
 export(make_figure)
 export(plan_experiment)
 export(quadratic)
+importFrom(magrittr,"%<>%")
+importFrom(magrittr,"%>%")
