--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,6 +28,7 @@ Imports: broom (>= 0.4.2),
     magrittr (>= 1.5),
     minpack.lm (>= 1.2-1),
     readr (>= 1.1.1),
+    stringr (>= 1.2.0),
     svglite (>= 1.2.0)
 Suggests: knitr (>= 1.15.1),
     rmarkdown (>= 1.3),
