--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -8,14 +8,18 @@ reference:
     desc: >
       Function for inspecting raw data, finding outliers
     contents:
-      - inspect_raw_data
+      - fret_inspect_raw_data
+      - fret_inspect_one_dataset
+      - fret_save_inspection_plots
   - title: "Data processing"
     desc: >
       Functions for processing raw data
     contents:
-      - average_technical_replicates
-      - correct_fret_signal
-      - batch_process
+      - fret_format_data
+      - fret_format_one_dataset
+      - fret_average_replicates
+      - fret_correct_signal
+      - fret_correct_one_dataset
   - title: "Curve fitting"
     desc: >
       Functions for fitting experimental data and making a final figure
@@ -23,19 +27,17 @@ reference:
       - guess_parameters
       - fit_binding_model
       - make_figure
+      - make_one_figure
+      - detect_binding_model
   - title: "Equations"
     desc: >
        Definitions of binding model equations
     contents:
-      - hyperbola
+      - hyperbolic
+      - hill
       - quadratic
-      - quadratic_homodimer
   - title: "Datasets"
   - desc: >
       Example datasets
   - contents:
-      - fret_good
-      - fret_donor_outliers
-      - fret_acceptor_outliers
-      - fret_saturated_reads
-      - fret_bad
+      - fret_binding_data
