--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(fret_average_replicates)
 export(fret_correct_signal)
 export(fret_format_data)
 export(fret_inspect_raw_data)
+export(fret_job_plot)
 export(guess_parameters)
 export(hill)
 export(hyperbolic)
