--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,7 @@ Authors@R: c(
     person("Ben", "Jenkins", role = "ctb"),
     person("Andrew", "Blumenfeld", role = "ctb"),
     person("Raibatak", "Das", role = "ctb"),
-    person("Karolin", "Luger", role = c("ldr", "led", "fnd"))
+    person("Karolin", "Luger", role = c("ldr", "fnd"))
     )
 Description: This package provides functions to analyze FRET binding data.
     Given raw fluorescence data from a FRET titration experiment's donor,
