--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -29,7 +29,8 @@ Imports: broom (>= 0.4.2),
     minpack.lm (>= 1.2-1),
     readr (>= 1.1.1),
     stringr (>= 1.2.0),
-    svglite (>= 1.2.0)
+    svglite (>= 1.2.0),
+    tidyr (>= 0.7.2)
 Suggests: knitr (>= 1.15.1),
     rmarkdown (>= 1.3),
     testthat (>= 1.0.2)
