--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,9 @@
 
 export(fit_binding_model)
 export(fp_average_replicates)
+export(fp_calculate_pola_aniso_int)
 export(fp_format_data)
+export(fp_inspect_raw_data)
 export(fp_use_signal)
 export(fret_average_replicates)
 export(fret_correct_signal)
