Replaced apply functions with purrr::map functions, see #41
I still need to replace some occurrences of mapply, but I don't know how to deal with nested purrr::map (whereas it works with mapply).

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,6 +28,7 @@ Imports: broom (>= 0.4.2),
     jsonlite (>= 1.5),
     magrittr (>= 1.5),
     minpack.lm (>= 1.2-1),
+    purrr (>= 0.2.4),
     readr (>= 1.1.1),
     rlang (>= 0.1.4),
     stringr (>= 1.2.0),
