Refactored *_inspect_raw_data to a single generic inspect_raw_data, see #42

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -33,7 +33,8 @@ Imports: broom (>= 0.4.2),
     rlang (>= 0.1.4),
     stringr (>= 1.2.0),
     svglite (>= 1.2.0),
-    tidyr (>= 0.7.2)
+    tidyr (>= 0.7.2),
+    zeallot (>= 0.1.0)
 Suggests: knitr (>= 1.15.1),
     rmarkdown (>= 1.3),
     testthat (>= 1.0.2)
