--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,16 +4,16 @@ export(fit_binding_model)
 export(format_data)
 export(fp_average_replicates)
 export(fp_calculate_pola_aniso_int)
-export(fp_inspect_raw_data)
 export(fp_use_signal)
 export(fret_average_replicates)
 export(fret_correct_signal)
-export(fret_inspect_raw_data)
 export(fret_job_plot)
 export(guess_parameters)
 export(hill)
 export(hyperbolic)
+export(inspect_raw_data)
 export(make_figure)
 export(plan_experiment)
 export(quadratic)
 importFrom(magrittr,"%>%")
+importFrom(zeallot,"%<-%")
