Replaced deprecated rlang::UQ() with the recommended !! operator

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,4 +16,5 @@ export(make_figure)
 export(plan_experiment)
 export(quadratic)
 importFrom(magrittr,"%>%")
+importFrom(rlang,"!!")
 importFrom(zeallot,"%<-%")
