Started using covr, very helpful

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -38,7 +38,8 @@ Imports: broom (>= 0.4.4),
     svglite (>= 1.2.1),
     tidyr (>= 0.8.1),
     zeallot (>= 0.1.0)
-Suggests: knitr (>= 1.20),
+Suggests: covr (>= 3.1.0),
+    knitr (>= 1.20),
     lintr (>= 1.0.2),
     rmarkdown (>= 1.10),
     testthat (>= 2.0.0)
